# FalcoTCP-Py

./: .gitignore  README.md  falcotcpdocs.md  pyproject.toml
src/falcotcp_py/: __init__.py  client.py  server.py
